Attempting to align divs correctly.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -44,7 +44,7 @@
   color: #888;
 }
 
-left-align {
+.left-align {
   align-self: flex-start;
 }
 
